# imagedifftool

./: LICENSE  README.md  d.py  pyproject.toml
imagedifftool/: icons.py  image_tools.py  image_view.py  image_viewer.py  main_window.py  window.py
